<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--main content-->
            <LinearLayout
                android:id="@+id/profile_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/signOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/margin_large"
                    android:text="@string/sign_out"
                    android:textColor="@color/chocolate_brown"
                    android:textAllCaps="true" />

                <!--name-->
                <LinearLayout
                    android:id="@+id/name_container"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:layout_gravity="center_vertical"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/padding_large"
                    android:paddingEnd="@dimen/padding_large">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_large"
                        android:layout_weight="0"
                        android:letterSpacing="0.14"
                        android:text="@string/name"
                        android:textAllCaps="true"
                        android:textColor="@color/greyish_brown"
                        tools:text="Name" />

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:maxLines="1"
                        android:textAppearance="@style/AutomationBenchmark.TextAppearance.Medium"
                        android:textColor="@color/greyish_brown"
                        tools:text="Vince Mormont" />
                </LinearLayout>

                <!--email-->
                <include layout="@layout/partial_divider" />

                <LinearLayout
                    android:id="@+id/email_container"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:layout_gravity="center_vertical"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/padding_large"
                    android:paddingEnd="@dimen/padding_large">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_large"
                        android:layout_weight="0"
                        android:letterSpacing="0.14"
                        android:text="@string/email"
                        android:textAllCaps="true"
                        android:textAppearance="@style/AutomationBenchmark.TextAppearance.Small"
                        android:textColor="@color/greyish_brown" />

                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/cont_profile_email_text"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:maxLines="1"
                        android:textAppearance="@style/AutomationBenchmark.TextAppearance.Medium"
                        android:textColor="@color/greyish_brown"
                        tools:text="email@AutomationBenchmark.com" />
                </LinearLayout>

                <!--password-->
                <include layout="@layout/partial_divider" />

                <LinearLayout
                    android:id="@+id/password_container"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:layout_gravity="center_vertical"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/padding_large"
                    android:paddingEnd="@dimen/padding_large">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_large"
                        android:layout_weight="0"
                        android:letterSpacing="0.14"
                        android:text="@string/password"
                        android:textAllCaps="true"
                        android:textColor="@color/greyish_brown" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/cont_profile_password_text"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:maxLines="1"
                        android:text="@string/password_masked"
                        android:textAppearance="@style/AutomationBenchmark.TextAppearance.Medium"
                        android:textColor="@color/greyish_brown" />
                </LinearLayout>

                <!--phone-->
                <include layout="@layout/partial_divider" />

                <LinearLayout
                    android:id="@+id/phone_container"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:layout_gravity="center_vertical"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/padding_large"
                    android:paddingEnd="@dimen/padding_large">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:letterSpacing="0.14"
                        android:text="@string/phone"
                        android:textAllCaps="true"
                        android:textColor="@color/greyish_brown" />

                    <TextView
                        android:id="@+id/profile_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/cont_profile_phone_text"
                        android:gravity="end"
                        android:textAppearance="@style/AutomationBenchmark.TextAppearance.Medium"
                        android:textColor="@color/greyish_brown"
                        tools:text="303-555-1234" />
                </LinearLayout>

                <!--ZipCode-->
                <include layout="@layout/partial_divider" />

                <include layout="@layout/partial_divider" />

            </LinearLayout>
        </ScrollView>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>