<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:id="@+id/signUpScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/txtViewSignUpHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_header_text_side"
                android:layout_marginTop="@dimen/margin_header_text_top"
                android:layout_marginRight="@dimen/margin_header_text_side"
                android:layout_marginBottom="@dimen/margin_header_text_bottom"
                android:gravity="center_horizontal"
                android:text="@string/create_account_header"
                android:textAppearance="@style/AutomationBenchmarkAppTextAppearance.Header" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutFirstName"
                style="@style/AutomationBenchmarkAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtViewSignUpHeader">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextFirstName"
                    style="@style/AutomationBenchmarkAppTextInputLayout.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/create_account_form_hint_first_name"
                    android:hint="@string/create_account_form_hint_first_name"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="textCapWords"
                    android:theme="@style/AutomationBenchmarkAppTextInputLayout.EditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutLastName"
                style="@style/AutomationBenchmarkAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLayoutFirstName"
                android:layout_marginTop="@dimen/margin_dialog_form_field_top">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLastName"
                    style="@style/AutomationBenchmarkAppTextInputLayout.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/create_account_form_hint_last_name"
                    android:hint="@string/create_account_form_hint_last_name"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="textCapWords"
                    android:theme="@style/AutomationBenchmarkAppTextInputLayout.EditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutSignupEmailAddress"
                style="@style/AutomationBenchmarkAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLayoutLastName"
                android:layout_marginTop="@dimen/margin_dialog_form_field_top">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSignUpEmailAddress"
                    style="@style/AutomationBenchmarkAppTextInputLayout.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/create_account_form_hint_email_address"
                    android:hint="@string/create_account_form_hint_email_address"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="textEmailAddress"
                    android:theme="@style/AutomationBenchmarkAppTextInputLayout.EditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passwordRequirementsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txtLayoutSignupPassword"
                android:inputType="textPassword"
                android:layout_marginBottom="@dimen/password_requirement_hint_margin"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutSignupPassword"
                style="@style/AutomationBenchmarkAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLayoutSignupEmailAddress"
                android:layout_marginTop="@dimen/margin_dialog_form_field_top"
                app:passwordToggleTint="@color/textNormalState">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSignUpPassword"
                    style="@style/AutomationBenchmarkAppTextInputLayout.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/create_account_form_hint_password"
                    android:hint="@string/create_account_form_hint_password"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="textPassword"
                    android:theme="@style/AutomationBenchmarkAppTextInputLayout.EditText"
                    tools:ignore="ContentDescription" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutMobileNo"
                style="@style/AutomationBenchmarkAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLayoutSignupPassword"
                android:layout_marginTop="@dimen/margin_dialog_form_field_top">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMobileNo"
                    style="@style/AutomationBenchmarkAppTextInputLayout.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/create_account_form_hint_phone_no"
                    android:digits="0123456789 -()"
                    android:hint="@string/create_account_form_hint_phone_no"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="phone"
                    android:maxLength="14"
                    android:theme="@style/AutomationBenchmarkAppTextInputLayout.EditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/button_signup_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLayoutMobileNo"
                android:layout_marginTop="@dimen/padding_xxx_large">

                <Button
                    android:id="@+id/btnCreateAccount"
                    style="@style/Button.Brown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/create_account"
                    android:text="@string/create_account"
                    android:textAppearance="@style/AutomationBenchmarkAppTextAppearance.Title.Button"
                    android:visibility="visible" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/btnLoginNavigate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_signup_container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                android:gravity="center"
                android:text="@string/action_sign_in_short" />

        </RelativeLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>